--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -19,9 +19,7 @@ a {
 .visually-hidden {
 	display: none;
 }
-.card-category {
-	color: #D73953;
-}
-.section-tagline {
-	color: #D73953;
+.card-category, .section-tagline {
+	color: var(--color-primary);
+
 }
