--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -1,25 +1,20 @@
-:root { 
---color-primary: #d73953;
---color-black: #090909;
---color-white: #ffffff;
---color-light-grey: #f3f3f3;
---color-dark-grey: #353535;
---text-color: var(color-black);
-
+:root {
+  --color-primary: #d73953;
+  --color-black: #090909;
+  --color-white: #ffffff;
+  --color-light-grey: #f3f3f3;
+  --color-dark-grey: #353535;
+  --text-color: var(--color-black);
+}
 html {
   scroll-behavior: smooth;
 }
-body {
-	color: #161616;
-}
-
-a {
-	color: #161616;
+body, a {
+  color: var(--text-color);
 }
 .visually-hidden {
-	display: none;
+  display: none;
 }
 .card-category, .section-tagline {
-	color: var(--color-primary);
-
+  color: var(--color-primary);
 }
