--- a/CSS_advanced/styles/12-style.css
+++ b/CSS_advanced/styles/12-style.css
@@ -5,8 +5,8 @@
   --color-light-grey: #f3f3f3;
   --color-dark-grey: #353535;
   --text-color: var(--color-black);
-  --font-family-base: "Open Sans","Helvetica Neue", Helvetica, Arial, sans-serif;
-  --font-family-title: Raleway,"Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
   --font-size-small: 1.2rem;
   --font-size-medium: 1.6rem;
   --font-size-large: 1.8rem;
@@ -32,7 +32,8 @@ body {
   font-weight: var(--font-weight-regular);
   line-height: var(--line-height-base);
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,
+.section-tagline, .section-title {
   font-family: var(--font-family-title);
   font-weight: var(--font-weight-bold);
 }
@@ -42,19 +43,20 @@ body, a {
 a {
   text-decoration: none;
 }
-
-}
 .visually-hidden {
   display: none;
 }
 .card-category, .section-tagline {
   color: var(--color-primary);
-  }
-  .section-title {
+}
+.section-tagline {
+  text-transform: var(--section-tagline-transform);
+}
+.section-title {
   font-size: var(--font-size-xx-large);
   margin: var(--section-title-margin);
   color: var(--section-title-color);
 }
 .section-header {
-	 text-align: var(--section-header-align);
+  text-align: var(--section-header-align);
 }
