--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -334,10 +334,10 @@ a:active {
 .section-tagline {
   text-transform: var(--section-tagline-transform);
 }
-.section-tagline {
-	    width: 960px;
-	   margin-left: auto;
-           margin-right: auto;
+.container {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .section-title {
   font-size: var(--font-size-xx-large);
