--- a/sass_scss/1-color_variable.scss
+++ b/sass_scss/1-color_variable.scss
@@ -1,5 +1,10 @@
+$text-color: #3D3D3D;
+
+
 body {
-  color: #3D3D3D; }
+  color: $text-color;
+}
 
 p {
-  color: #3D3D3D; }
+  color: $text-color;
+}
