--- a/sass_scss/2-color_variables.scss
+++ b/sass_scss/2-color_variables.scss
@@ -1,12 +1,16 @@
 $text-color: #3D3D3D;
-$background col #6D6D6D;
+$background-color: #6D6D6D;
+
 
 body {
   color: $text-color;
-  background col :$background col;
+  background-color: $background-color;
 }
+
 p {
   color: $text-color;
 }
+
 h2 {
-  background-color: #6D6D6D; }
+  background-color: $background-color;
+}
