--- a/sass_scss/3-nested_tag.scss
+++ b/sass_scss/3-nested_tag.scss
@@ -1,5 +1,9 @@
+
 body {
-  margin: 0px;
-  padding: 0px; }
-  body p {
-    margin: 10px; }
+  margin: 0;
+  padding: 0;
+  
+   p {
+    margin: 10px;
+  }
+}
