--- a/sass_scss/10-import_colors.scss
+++ b/sass_scss/10-import_colors.scss
@@ -1,13 +1,18 @@
+
+
 @import '10-colors';
 
+
 .red {
-    color: red;
+  color: $red;
 }
+
 
 .green {
-    color: green;
+  color: $green;
 }
 
+
 .blue {
-    color: blue;
+  color: $blue;
 }
