--- a/sass_scss/11-loop_photos.scss
+++ b/sass_scss/11-loop_photos.scss
@@ -1,9 +1,20 @@
+/* for each */
+@use '11-photos' as photos;
 
-@use 'list-names' as names;
+@each $list in photos.$list-names {
+    .photo-#{$list} {
+        background: image-url("photos/#{$list}.jpg") no-repeat;
+    }
 
+    .photo-#{$list} {
+        background: image-url("photos/#{$list}.jpg") no-repeat;
+    }
 
-@each $name in names.$list-names {
-  .#{$name} {
-    background-image: url('images/#{$name}.jpg');
-  }
+    .photo-#{$list} {
+        background: image-url("photos/#{$list}.jpg") no-repeat;
+    }
+
+    .photo-#{$list} {
+        background: image-url("photos/#{$list}.jpg") no-repeat;
+    }
 }
