--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -373,9 +373,8 @@
     padding: 10rem 40rem 2rem 0;
   }
   /* Section Latest news ============================= */
-  .row
-  section-latest-news .col-1-3:nth-child(2) {
-    flex-direction: column-reverse;
+  .row section-latest-news .col-1-3:nth-child(1),
+  .row section-latest-news .col-1-3:nth-child(2) {
     margin: 0 1rem;
   }
   /*** 4. CARD ***/
