--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -374,7 +374,7 @@
   }
   /* Section Latest news ============================= */
   .row section-latest-news .col-1-3:nth-child(1),
-  .row section-latest-news .col-1-3:nth-child(2) {
+  .row section-latest-news .row {
     margin: 0 1rem;
   }
   /*** 4. CARD ***/
