--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -373,9 +373,9 @@
     padding: 10rem 40rem 2rem 0;
   }
   /* Section Latest news ============================= */
-  .row section-latest-news .col-1-3:nth-child(1),
-  .row section-latest-news .row {
-    margin: 0 1rem;
+      .section-latest-news.row {
+        flex-direction: row-reverse;
+      }
   }
   /*** 4. CARD ***/
   
