--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -372,18 +372,10 @@
     padding: 10rem 40rem 2rem 0;
   }
 
-  /* Section Latest News
-      ============================= */
-      .section-latest-news.row {
+  /* Section Latest news ============================= */
+      .section-latest-news .row {
         flex-direction: row-reverse;
       }
-
-/* Section SERVICES ============================= */
-
-      .section-services .row {
-        flex-wrap: wrap;
-      }
-
   
   /*** 4. CARD ***/
   
@@ -512,3 +504,4 @@
     font-size: 10rem;
     z-index: -1;
   }
+
