--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -378,7 +378,10 @@
       }
   
   /*** 4. CARD ***/
-  
+  /* Section SERVICES ============================= */
+  .section-services .row {
+    flex-wrap: wrap;
+  }
   /* Card (all styles)
       ============================= */
   
