--- a/flexbox/5-styles.css
+++ b/flexbox/5-styles.css
@@ -61,12 +61,8 @@
   
     /** HEADER **/
     --header-padding: 4rem 0 0;
-    --header-logo-position: relative;
-    --header-logo-link-display: inline-block;
-    --header-logo-link-position: absolute;
-    --header-logo-link-top: -1rem;
-    --header-logo-link-left: 0;
-  
+    --header-containder-display: flex;
+    --header-containder-justify-content: space-between;
     /** FOOTER **/
     --footer-padding: 5rem 0 1rem;
   
@@ -263,16 +259,6 @@
          background: transparent;
   }
   
-  .header-logo {
-    position: var(--header-logo-position);
-  }
-  
-  .header-logo a {
-    display: var(--header-logo-link-display);
-    position: var(--header-logo-link-position);
-    top: var(--header-logo-link-top);
-    left: var(--header-logo-link-left);
-  }
   
   /* Footer
       ============================= */
