--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -14,7 +14,6 @@
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
 }
 body {
   margin: 0;
@@ -107,7 +106,7 @@ button::-moz-focus-inner {
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring,
 button:-moz-focusring {
-  outline: 1px dotted;
+  outline: 1px dotted ButtonText;
 }
 fieldset {
   padding: 0.35em 0.75em 0.625em;
@@ -219,7 +218,7 @@ template {
   --nav-item-font-size: var(--font-size-medium);
   --nav-item-letter-spacing: 0.04rem;
   --nav-item-display: inline-block;
-  --nav-item-margin: 0 2rem 0 0;
+  --nav-item-margin: 0 0 0 2rem;
   --nav-item-link-hover: var(--color-white);
 
   /** BUTTON **/
@@ -330,17 +329,19 @@ a:active {
 /* Grid
       ============================= */
 
+.row {
+  display: flex;
+}
+
 ul.row {
   margin: -1rem;
   padding: 0;
   list-style: none;
 }
-.row {
-  display: flex;
-}
 
 [class*="col-"] {
   margin: 1rem;
+
 }
 
 .col-1-3 {
@@ -354,19 +355,25 @@ ul.row {
 /* Navbar
       ============================= */
 
+
 .nav {
+  margin: 0;
   padding: 0;
   list-style: none;
   text-align: center;
   display: flex;
 }
 
+.nav .nav-item + .nav-item {
+  margin: var(--nav-item-margin);
+}
+
+
 .nav .nav-item {
   font-family: var(--nav-item-font-family);
   font-weight: var(--nav-item-font-weight);
   font-size: var(--nav-item-font-size);
   letter-spacing: var(--nav-item-letter-spacing);
-  margin: 0 0 0 2rem;
 }
 
 .nav .nav-link {
@@ -399,16 +406,18 @@ ul.row {
 /* Header
       ============================= */
 
+.header-container{
+  display: flex;
+  justify-content: space-between;
+}
+
 .header {
   padding: var(--header-padding);
   position: relative;
   z-index: 3;
   background: transparent;
 }
-.header-container {
-  display: flex;
-  justify-content: space-between;
-}
+
 
 /* Footer
       ============================= */
@@ -508,16 +517,13 @@ ul.row {
   padding: 10rem 40rem 2rem 0;
 }
 
-/* Section Latest News
-      ============================= */
-.section-latest-news.row {
-  flex-direction: row-reverse;
+/* Section Latest news ============================= */
+.section-latest-news .row {
+    flex-direction: row-reverse;
 }
+/* Section SERVICES ============================= */
 
-/* Section SERVICES
-      ============================= */
-
-.section-services.row {
+.section-services .row {
   flex-wrap: wrap;
 }
 
