--- a/flexbox/11-styles.css
+++ b/flexbox/11-styles.css
@@ -526,3 +526,21 @@
     font-size: 10rem;
     z-index: -1;
   }
+  /*** ARTICLE PAGE ***/
+/* Section HERO (article)
+    ============================= */
+   
+    .hero-article
+    {
+      background-size: 150rem 100rem;
+      background-position: 50% 0;
+      content: empty;
+      background: rgba(0, 0, 0, 0.8);
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 0;
+
+    }
