--- a/form/03-styles.css
+++ b/form/03-styles.css
@@ -27,7 +27,7 @@ fieldset {
 	border: 0;
 	padding: 0 0 2rem;
 }
-.label {
+label {
     cursor: pointer;
     display: block;
     font-size: 1.4rem;
